tear out firebase for now, the double auth flow was too confusing, replace with JPA and token based auth for now, tested login endpoints and they're working