@@ -1,86 +1,91 @@
 package com.mercy.tarot.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.mercy.tarot.security.FirebaseAuthenticationFilter;
 import com.mercy.tarot.security.JwtAuthenticationFilter;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
 public class SecurityConfig {
 
-    private final FirebaseAuthenticationFilter firebaseAuthenticationFilter;
-    private final JwtAuthenticationFilter jwtAuthFilter;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final UserDetailsService userDetailsService;
 
-    public SecurityConfig(FirebaseAuthenticationFilter firebaseAuthenticationFilter,
-            JwtAuthenticationFilter jwtAuthFilter) {
-        this.firebaseAuthenticationFilter = firebaseAuthenticationFilter;
-        this.jwtAuthFilter = jwtAuthFilter;
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
+            UserDetailsService userDetailsService) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.userDetailsService = userDetailsService;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(AbstractHttpConfigurer::disable)
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authz -> authz
-                        // Public endpoints - General
-                        .requestMatchers("/api/auth/token").permitAll() // <-- Add this line
-                        .requestMatchers("/api/public/**").permitAll()
-                        .requestMatchers("/api/users").permitAll()
-                        .requestMatchers("/actuator/health").permitAll()
+                        // Public endpoints
+                        .requestMatchers(
+                                "/api/auth/**",
+                                "/api/users",
+                                "/actuator/health",
+                                "/api/users/check-email**",
+                                "/api/public/**",
+                                "/api/cards/daily",
+                                "/api/spread/weighted/**",
+                                "/api/spread/parallel/weighted/**",
+                                "/api/draw/parallel",
+                                "/api/draw/parallel/weighted",
+                                "/api/story/location",
+                                "/api/story/character-trait",
+                                "/api/story/theme",
+                                "/api/story/keyword",
+                                "/api/story/moral-value",
+                                "/api/story/point-of-view",
+                                "/api/story/style",
+                                "/api/story/climax-event",
+                                "/api/getStoryDTO",
+                                "/api/getRandomKeyword")
+                        .permitAll()
 
-                        // Public endpoints - Card related (Free tier)
-                        .requestMatchers("/api/cards/daily").permitAll()
-                        .requestMatchers("/api/spread/weighted/**").permitAll()
-                        .requestMatchers("/api/spread/parallel/weighted/**").permitAll()
-                        .requestMatchers("/api/draw/parallel").permitAll()
-                        .requestMatchers("/api/draw/parallel/weighted").permitAll()
+                        // User role endpoints
+                        .requestMatchers(
+                                "/api/cards/**",
+                                "/api/readings/**",
+                                "/api/spread/parallel/**",
+                                "/api/users/me",
+                                "/api/users/**")
+                        .hasRole("USER")
 
-                        // Public endpoints - Story elements (Free tier "taste" endpoints)
-                        .requestMatchers("/api/story/location").permitAll()
-                        .requestMatchers("/api/story/character-trait").permitAll()
-                        .requestMatchers("/api/story/theme").permitAll()
-                        .requestMatchers("/api/story/keyword").permitAll()
-                        .requestMatchers("/api/story/moral-value").permitAll()
-                        .requestMatchers("/api/story/point-of-view").permitAll()
-                        .requestMatchers("/api/story/style").permitAll()
-                        .requestMatchers("/api/story/climax-event").permitAll()
+                        // Premium role endpoints
+                        .requestMatchers(
+                                "/api/story/full-reading/**",
+                                "/api/story/complete-element/**")
+                        .hasRole("PREMIUM")
 
-                        // Public endpoints - Legacy story endpoints
-                        .requestMatchers("/api/getStoryDTO").permitAll()
-                        .requestMatchers("/api/getRandomKeyword").permitAll()
-
-                        // Private endpoints - Cards (Authenticated users)
-                        .requestMatchers("/api/cards/**").hasRole("USER")
-                        .requestMatchers("/api/readings/**").hasRole("USER")
-                        .requestMatchers("/api/spread/parallel/**").hasRole("USER") // Non-weighted parallel spreads
-                                                                                    // require auth
-
-                        // Private endpoints - Full story features (Paid tier)
-                        .requestMatchers("/api/story/full-reading/**").hasRole("PREMIUM")
-                        .requestMatchers("/api/story/complete-element/**").hasRole("PREMIUM")
-
-                        // Admin endpoints
+                        // Admin role endpoints
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
 
                         .anyRequest().authenticated())
-                .addFilterBefore(firebaseAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -88,16 +93,37 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173", // Your Vite frontend
-                "https://your-production-domain.com"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:5173", // Your local frontend
+                "https://yourproductiondomain.com" // Production domain
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"));
+        configuration.setExposedHeaders(List.of(
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setMaxAge(3600L); // 1 hour cache
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 }
